--- a/styles/style.css
+++ b/styles/style.css
@@ -23,13 +23,13 @@ html {
 
 @media only screen and (max-width: 769px) {
 #custom_joshn {
-  /*background-image: url(../images/sm_bg.jpg);*/
   background-image: url(../images/sm_bg.jpg);
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-color: #5D5c61;
   }
+
 }
 
 div[background-image] {
@@ -65,7 +65,15 @@ nav #custom_ul li a:hover {
 nav ul li a {
   text-decoration: none;
   color: #fff;
-  padding: 15px;
+  padding: 20px;
+}
+
+@media only screen and (max-width: 769px) {
+nav ul li a {
+  text-decoration: none;
+  color: #fff;
+  padding: 5px;
+  }
 }
 
 #about {
@@ -112,8 +120,27 @@ nav ul li a {
   background-color: rgb(206,183,147);
 }
 
-#contact_map {
+.typewriter {
+  color: #fff;
+  font-family: monospace;
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid orange; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .15em; /* Adjust as needed */
+  animation: 
+    typing 3.5s steps(30, end),
+    blink-caret .5s step-end infinite;
+}
 
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: orange }
 }
 
 label, input, button {
